--- a/data/oscillators/L-1.md
+++ b/data/oscillators/L-1.md
@@ -5,7 +5,7 @@ Un-adjusted L-1 Basic VCO, as built, trimmers as found.
 CV to V/Oct input, and to front panel jacks on 34465A.
 Tri out to rear jacks on 34465A.
 
-Synt PSU monitored with Joranalogue Test3, rails steady at +12.02V -12.06V.
+Synth PSU monitored with Joranalogue Test3, rails steady at +12.02V -12.06V.
 Current draw of the L-1 BVCO 34mA @ +12, 36mA @ -12.
 
 ## Volts per octave slope
@@ -22,6 +22,10 @@ Tweaked as close as possible to 32Hz (32.00216Hz) with offset on PDVS2 (2.7mV)
 Set to 5V, then voltage adjusted until freq was 5 octaves above 32Hz, 1024Hz (1024.137Hz) which was at 4.9883V
 
 4.9856 / 5 = 0.99712 volts per octave
+
+## Linearity
+
+Set to 110Hz at 0V. Ian Johnston PDVS2 as voltage source. Two runs, 0V to 10V then -10V to 0V.
 
 ## Frequency drift
 
